# federated-learning-privacy-reconstruction-inference

./: .gitignore  AGENTS.md  README.md  final_model.pt  pyproject.toml
attacks/: gradient_inversion_attack.py  gradient_inversion_batch_attack.py  local_update_inversion_attack.py  local_update_multistep_inversion_attack.py  metrics.py  real_update_inversion_bn_aware.py
configs/: baseline_fedavg_cifar10_local.md
fl_security_benchmark/: __init__.py  client_app.py  server_app.py  task.py
fl_security_benchmark/utils/: reproducibility.py
research/notes/: accuracy_tuning_fedavg_cifar10_2026-04-27.md  baseline_flower_pytorch_cifar10_v1.md  baseline_multiseed_overview.md  baseline_security_fedavg_cifar10_cnn_seed42.md  baseline_selection_summary.md  defense_attack_sample0_adaptive_clipping.md  defense_attack_sample0_sanity.md  defense_attack_samples0_4_none_vs_clipnoise.md  defense_clipnoise_r20_results.md  defense_clipnoise_r5_sweep.md  defense_clipping_r20_results.md  defense_clipping_r5_sweep.md  fedavg_e1_baseline_r20_c6_lr002_bs32_seed42.md  fedavg_e1_lr005_baseline_r20_c6_bs32_seed42.md  fedavg_e2_baseline_r20_c6_lr002_bs32_seed42.md  fedavg_e2_lr003_baseline_r20_c6_bs32_seed42.md  fedsgd_baseline_r5_c6_lr002_bs64_seed42.md  fedsgd_lr_sweep_r20_c6_bs64_seed42.md  fedsgd_strict_r50_c6_lr005_bs64_seed42.md  fedsgd_sweep_methodology.md  gradient_inversion_batchsize_resnet_all_iter2000_seed42.md  gradient_inversion_resnet_all_iter2000_seed42.md  gradient_inversion_resnet_fc_vs_all_iter2000_seed42.md  local_update_inversion_batchsize_resnet_all_iter2000_tv1e-6_seed42.md  privacy_utility_final_summary.md  (+7 more)
scripts/: make_reconstruction_comparison_figure.py  run_attack_seed_robustness.sh  run_baseline_fedavg_cifar10.sh  run_defense_ablation_cosine_10samples.sh  run_experiment_fedavg_cifar10.sh  run_fedavg_10samples_extension.sh  run_fedsgd_defense_utility_400.sh  run_fedsgd_defense_utility_calibration.sh  run_fedsgd_sweep.py  run_gradient_inversion_batch.sh  run_local_steps_cosine_extension.sh  run_resnet6_flower.sh  run_update_batchsize_cosine_extension.sh  summarize_attack_metrics.py
(+66 files in other folders)
