[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "fl_security_benchmark.server_app:app"
clientapp = "fl_security_benchmark.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 20
fraction-train = 1.0
fraction-evaluate = 0.0
local-epochs = 10
learning-rate = 0.02
batch-size = 32
seed = 42
