[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "fl_security_benchmark.server_app:app"
clientapp = "fl_security_benchmark.client_app:app"

[tool.flwr.app.config]
defense-type = "none"
defense-clip-norm = 0.0
defense-noise-std = 0.0
fl-strategy = "fedavg"
server-learning-rate = 1.0
server-momentum = 0.0
fedopt-eta = 0.1
fedopt-eta-l = 0.05
fedopt-beta1 = 0.9
fedopt-beta2 = 0.99
fedopt-tau = 0.001
fl-algorithm = "fedavg"
num-server-rounds = 20
fraction-train = 1.0
fraction-evaluate = 0.0
local-epochs = 10
learning-rate = 0.02
weight-decay = 0.0005
scheduler = "none"
scheduler-min-lr = 0.0
seed-with-server-round = false
save-final-model = true
batch-size = 32
seed = 42
